--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,7 +3,14 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  min-height: calc(100vh - 140px);
+}
+
+@media (max-width: 768px) {
+  .home-container {
+    min-height: auto;
+    width: 100%;
+  }
 }
 
 .title-stack {
